<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/noticiasFragment"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_Ininio" />
     <!--   <item
            android:id="@+id/miPerfilFragment"
            android:icon="@drawable/ic_inicio"
            android:title="Mi Perfil" />-->
        <item
            android:id="@+id/crearCompetencia1Fragment"
            android:icon="@drawable/ic_new"
            android:title="@string/menu_CreaMisCompetencias" />
        <item
            android:id="@+id/filtroFragment"
            android:icon="@drawable/baseline_emoji_events_black_18dp"
            android:title="@string/menu_Competencias"/>

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/misCompetencias"
                android:icon="@drawable/baseline_sports_black_18dp"
                android:title="@string/menu_MisCompetencias" />
            <item
                android:id="@+id/tabPerfilFragment"
                android:icon="@drawable/ic_solicitudes"
                android:title="@string/menu_MiPerfil" />
            <item
                android:icon="@drawable/ic_logout"
                android:title="Cerrar Sesion"
                android:id="@+id/cerrarSesionFragment">
            </item>

        </menu>
    </item>


</menu>
