<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/design_default_color_primary">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nombUsuario"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:text="@string/txtNombreUsuario"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/nomb"
            android:text="@string/txtNombre"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/apelido"
            android:text="@string/txtApellido"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_aceptar"></ImageButton>

        <ImageButton
            android:id="@+id/btnRechazar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_rechazar"></ImageButton>
    </LinearLayout>

</LinearLayout>
