<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_nombreOrg_invitacion"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNombre">
            </TextView>
            <TextView
                android:id="@+id/tv_competencia_invitacion"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_Competencias">
            </TextView>
            <TextView
                android:id="@+id/tv_categoria_invitacion"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria">
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      ">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      ">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_Aceptar_invitacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_aceptar">
            </ImageButton>

            <ImageButton
                android:id="@+id/btn_Rechazar_invitacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rechazar">
            </ImageButton>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>